--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/incentivizer
+
 # Connection pool properties
 connection.pool.initialPoolSize = 5
 connection.pool.minPoolSize = 5
