Implemented core functionality to allow creating and maintaining Challenges, Registering and maintaining users, and basic setup/configuration.

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -12,3 +12,5 @@ connection.pool.initialPoolSize = 5
 connection.pool.minPoolSize = 5
 connection.pool.maxPoolSize = 20
 connection.pool.maxIdleTime = 3000
+logging.level.root=WARN
+logging.level.com.baeldung=TRACE
